--- a/public/assets/css/modal.css
+++ b/public/assets/css/modal.css
@@ -1,4 +1,5 @@
-.modal-add {
+.modal-add,
+.modal-update-size {
     position: fixed;
     top: 0;
     left: 0;
@@ -11,11 +12,13 @@
     z-index: 100;
 }
 
-.modal-add.open {
+.modal-add.open,
+.modal-update-size.open {
     display: flex;
 }
 
-.modal-container-add {
+.modal-container-add,
+.modal-container-update {
     background-color: #fff;
     width: 450px;
     border-radius: 10px;
@@ -25,15 +28,21 @@
     /* animation: modalFadeIn ease 0.5s; */
 }
 
+.modal-container-update {
+    width: 600px;
+    border-radius: 5px;
+    animation: modalFadeIn ease 0.5s;
+}
+
 .modal-content {
     border-radius: 12px;
 }
 
 .modal-close {
     position: absolute;
-    right: 0;
+    right: 2px;
     top: 0;
-    padding: 14px;
+    padding: 5px;
     font-size: 1.15rem;
     cursor: pointer;
     opacity: 0.8;
@@ -68,4 +77,10 @@
         opacity: 1;
         transform: translateY(0);
     }
+}
+
+.size-text::before {
+    content: "• ";
+    color: black;
+    font-weight: bold;
 }
