--- a/public/client/css/login.css
+++ b/public/client/css/login.css
@@ -22,9 +22,9 @@ body {
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
     position: relative;
     overflow: hidden;
-    width: 768px;
+    width: 800px;
     max-width: 100%;
-    min-height: 480px;
+    min-height: 600px;
 }
 
 .container p {
@@ -111,6 +111,12 @@ body {
     width: 50%;
     opacity: 0;
     z-index: 1;
+}
+
+.validate-error {
+    font-size: 12px;
+    align-self: start;
+    margin-left: 6px;
 }
 
 .container.active .sign-up {
@@ -217,4 +223,9 @@ body {
 
 .container.active .toggle-right {
     transform: translateX(200%);
+}
+
+.container.no-transition * {
+    transition: none !important;
+    animation: none !important;
 }
