--- a/public/client/css/style.css
+++ b/public/client/css/style.css
@@ -33,6 +33,8 @@
 html,
 body {
 	height: 100%;
+	/* fix cái bị che */
+	padding-top: 72px; 
 	font-family: "Nunito Sans", sans-serif;
 	-webkit-font-smoothing: antialiased;
 }
@@ -315,9 +317,17 @@ ol {
   Header
 -----------------------*/
 
-.header {
-	background: #ffffff;
+
+.header{
+	position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: #ffffff;
+    z-index: 99;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
+
 
 .header__top {
 	background: #111111;
@@ -3485,7 +3495,8 @@ ol {
 		width: 100%;
 		background: rgba(0, 0, 0, 0.7);
 		content: "";
-		z-index: 98;
+		/* ĐỘ SÂU HƠN CÁI HEADER 100 > 99 */
+		z-index: 100; 
 		-webkit-transition: all, 0.5s;
 		-o-transition: all, 0.5s;
 		transition: all, 0.5s;
@@ -3493,16 +3504,21 @@ ol {
 	}
 	.offcanvas-menu-overlay.active {
 		visibility: visible;
+	
 	}
 	.offcanvas-menu-wrapper {
 		position: fixed;
+		/* nằm trên cùng ko bị đẩy xuống do padding top 72px của body */
+		top: 0;
 		left: -300px;
 		width: 300px;
 		height: 100%;
 		background: #ffffff;
 		padding: 50px 20px 30px 30px;
 		display: block;
-		z-index: 99;
+		padding-top: -72px;
+		/* menu hiện ra khi thu nhỏ (sâu hơn tất cả) */
+		z-index: 100000;
 		overflow-y: auto;
 		-webkit-transition: all, 0.5s;
 		-o-transition: all, 0.5s;
